# drone_project

./: .gitignore  README.md  matching.py
comp_transmitter/: CMakeLists.txt  Makefile  compression_tool.py  data_transfer  data_transfer.cpp  ronin.cpp
compression_transmission/: data_transfer  data_transfer.cpp
image_difference/: comparison.py
landing_zone_detection/: ronin.py
motion_tracking/: basic_tracking.py
